fix(mini-map): Height of minimap on small lists + ctrl+click on small lists

--- a/Frontend/src/app/files-explorer/files-minimap/files-minimap.component.scss
+++ b/Frontend/src/app/files-explorer/files-minimap/files-minimap.component.scss
@@ -94,6 +94,10 @@
     cursor: grabbing;
 }
 
+:host(.files-minimap--static) .files-minimap__rail {
+    cursor: default;
+}
+
 .files-minimap__tooltip {
     position: absolute;
     right: calc(100% + 10px);
